2008-08-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c:
	[ 2023638 ] SFCB not considering UTC offset in calculating binary time

2008-08-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	Fixed [ 2048875 ] sfcb silently crashes when sent certain EmbeddedObjects
	Fixed [ 2050421 ] Namespace not set for EmbeddedObjects in an XML value array

	* instance.c, objectImpl.c:
	Fixed [ 2048878 ] sfcb does not implement setObjectPath

	* cimXmlParser.c, cimXmlOps.y:
	Fixed [ 1918880 ] SFCB - Escaped XML sequences in embedded instances
	
2008-08-08 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2043672 ] Tighten SSL security for sfcb

	* cimXmlParser.c:
	[ 2025214 ] SFCB XML parser needs to unescape newlines

2008-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2039216 ] Memory leak in getSfcbUuid

2008-08-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.h, trace.c
	[ 2041967 ] sfcb trace messages have hard-coded size max

2008-07-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 2024019 ] SFCB can't handle large error messages
	(patch by Bart Whitely)

2008-07-11 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c:
	[ 2015639 ] SFCB SLP registration process crashes after 2nd reg
	(patch by Nick Bofferding)

2008-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * cimXmlGen.c
    Fixed [2001486] SFCB extrinsic method output parameter problems
        (patch from J. Bart Whitely)

2008-06-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed [ 2002392 ] Memory leaks in sfcb 1.2.5-35f
	(found by Hari V.)

2008-06-27 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, httpAdapter.c, sfcBroker.c, sfcb.cfg.pre.in:
	Fixed [ 1978218 ] SFCB support for HTTP over a unix socket
	(patch by J. Bart Whitely)

2008-06-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * interopServerProvider.c 