@@ -35,6 +35,7 @@ Bugs fixed:
 - 2023638 SFCB not considering UTC offset in calculating binary time
 - 2050421 Namespace not set for EmbeddedObjects in an XML value array
 - 1918880 SFCB - Escaped XML sequences in embedded instances
+- 2060748 compile fails when --disable-debug configure flag is set
 
 Changes in 1.3.1
 ================
